--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,4 +8,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 // Fontawesome
-@import '~@fortawesome/fontawesome-free/scss/fontawesome'
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+// Style
+@import 'common.scss'
