--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,7 +7,7 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #3490dc;
+/* $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
@@ -16,4 +16,12 @@ $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
-$cyan: #6cb2eb;
+$cyan: #6cb2eb; */
+
+
+/*nostri color */
+$rosso:#f2545b ;
+$viola:#a93f55;
+$gunmetal: #19323c;
+$opal: #9cbcbe;
+$cream: #f3f7f0;
