--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17124,6 +17124,12 @@ readers do not read off random characters that represent icons */
   transition: 0.5s;
 }
 
+/* width */
+
+.my-w-100 {
+  width: 100%;
+}
+
 /* margin top */
 
 .margin-t-4 {
@@ -17154,7 +17160,7 @@ readers do not read off random characters that represent icons */
   margin-top: 100px;
 }
 
-/* margin bot */
+/* margin bottom */
 
 .margin-b-4 {
   margin-bottom: 40px;
