--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17063,6 +17063,12 @@ readers do not read off random characters that represent icons */
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
+.my-primo-piano {
+  height: 83vh;
+  width: 100%;
+  overflow-y: scroll;
+}
+
 /* color */
 
 .rosso {
