--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17044,6 +17044,10 @@ readers do not read off random characters that represent icons */
   box-sizing: border-box;
 }
 
+.debug {
+  border: 1px solid greenyellow;
+}
+
 .margin-nav {
   margin-top: 55px;
 }
