--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -3,7 +3,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
+
+.debug{border: 1px solid greenyellow;}
 
 .margin-nav{margin-top: 55px;}
 
