add forma iniziale search e bordo nostro

--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -7,7 +7,7 @@
 
 .debug{border: 1px solid greenyellow;}
 
-.margin-nav{margin-top: 55px;}
+.margin-nav{margin-top: 56px;}
 
   /* bottone */
 .bottone{
@@ -17,6 +17,10 @@
     display: inline-block;
     border-radius: 200px;
     cursor: pointer;
+}
+
+.bordo-card{
+  border: 2px solid #19323c5b;
 }
 
 .ombra{
