fixed heigth navbar

--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -7,8 +7,6 @@
 
 .debug{border: 1px solid greenyellow;}
 
-.margin-nav{margin-top: 56px;}
-
   /* bottone */
 .bottone{
     padding: 0.6em 0.9em;
@@ -25,6 +23,15 @@
 
 .ombra{
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+.altezza-nav{
+  height: 60px;
+  background-color: red;
+}
+
+.margin-nav{
+  margin-top: 60px;
 }
 
 .my-primo-piano{
