add providing data to dashboard

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17048,10 +17048,6 @@ readers do not read off random characters that represent icons */
   border: 1px solid greenyellow;
 }
 
-.margin-nav {
-  margin-top: 55px;
-}
-
 /* bottone */
 
 .bottone {
@@ -17065,6 +17061,14 @@ readers do not read off random characters that represent icons */
 
 .ombra {
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+.altezza-nav {
+  height: 60px;
+}
+
+.margin-nav {
+  margin-top: 60px;
 }
 
 .my-primo-piano {
