--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -7,7 +7,7 @@
 
 .debug{border: 1px solid greenyellow;}
 
-  /* bottone */
+
 .bottone{
     padding: 0.6em 0.9em;
     align-items: center;
@@ -15,6 +15,10 @@
     display: inline-block;
     border-radius: 200px;
     cursor: pointer;
+}
+
+.bottone:hover{
+  color: #9cbcbe;
 }
 
 .bordo-card{
@@ -27,8 +31,9 @@
 
 .altezza-nav{
   height: 60px;
-  background-color: red;
+  // background-color: red;
 }
+
 .fl-right{
   float: right;
 }
@@ -57,8 +62,6 @@
 .rosso-background:hover{
   text-decoration: none;
 }
-
-
 
 .viola-background{background-color: #a93f55;}
 .gunmetal-background{background-color: #19323c;}
