fixed the graphics on Dashboard - Create - Edit - Show

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17118,6 +17118,10 @@ readers do not read off random characters that represent icons */
   text-decoration: none;
 }
 
+.tick {
+  background-color: #f2545b;
+}
+
 .viola-background {
   background-color: #a93f55;
 }
