--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -57,10 +57,14 @@
 .rosso-background{
   background-color:#f2545b;
   color: #f3f7f0;
-
+  
 }
 .rosso-background:hover{
   text-decoration: none;
+}
+
+.tick{
+  background-color:#f2545b;
 }
 
 .viola-background{background-color: #a93f55;}
