home add home restyling

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17097,10 +17097,16 @@ readers do not read off random characters that represent icons */
 .rosso-background {
   background-color: #f2545b;
   color: #f3f7f0;
+  border: 3px solid rgba(0, 0, 0, 0);
+  transition: 0.5s;
 }
 
 .rosso-background:hover {
   text-decoration: none;
+  background-color: #f2545c00;
+  border: 3px solid white;
+  transition: 0.5s;
+  color: white;
 }
 
 .cream-background {
@@ -17108,11 +17114,6 @@ readers do not read off random characters that represent icons */
 }
 
 /* hover */
-
-.rosso-background:hover {
-  transition: 0.5s;
-  background-color: #be4248;
-}
 
 .cream-background:hover {
   background-color: #ced1cc;
