--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -11,6 +11,10 @@
   overflow-y: auto;
 }
 
+.border-rad{
+  border-radius: 20px;
+}
+
 .bottone{
     padding: 0.6em 0.9em;
     align-items: center;
@@ -29,7 +33,7 @@
 // }
 
 .ombra{
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.158) 0px 6px 6px;
 }
 
 .altezza-nav{
