fixed bottons graphics problem

--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -66,9 +66,9 @@
 .rosso-background:hover{
   text-decoration: none;
   background-color:#f2545c00;
-  border: 3px solid white;
+  border: 3px solid #f2545b;
   transition: 0.5s;
-  color: white;
+  // color: white;
 }
 
 .cream-background{background-color: #f3f7f0;}
