add sfondo navbar

--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -5,6 +5,13 @@
     box-sizing: border-box;
 }
 
+
+
+.my-nav{
+    background-color: white;
+    z-index: 2;
+}
+
 .debug{border: 1px solid greenyellow;}
 
 .over-y{
